--- a/package.json
+++ b/package.json
@@ -3,24 +3,21 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve --port 4206 -o",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build_lib": "ng build example-ng7-lib",
     "npm_pack": "cd dist/example-ng7-lib && npm pack",
-    "package": "npm run build_lib && npm run npm_pack",
-    "postinstall": "npm run package && ng build --prod"
+    "package": "npm run build_lib && npm run npm_pack"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
     "@angular/cdk": "^7.1.1",
-    "@angular/cli": "~7.0.2",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
-    "@angular/compiler-cli": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
@@ -28,11 +25,8 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
-    "express": "^4.16.4",
     "ngx-scrollbar": "^3.2.2",
-    "path": "^0.12.7",
     "rxjs": "~6.3.3",
-    "typescript": "~3.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -60,9 +54,5 @@
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
-  },
-  "engines": {
-    "node": "8.12.0",
-    "npm": "6.5.0"
   }
 }
