--- a/projects/example-ng7-lib/package.json
+++ b/projects/example-ng7-lib/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "peerDependencies": {
     "@angular/common": "^7.0.0",
-    "@angular/core": "^7.0.0",
-    "@angular/cdk": "^7.1.1",
-    "ngx-scrollbar": "^3.2.2"
+    "@angular/core": "^7.0.0"
   }
 }
